<resources>
    <string name="app_name">BuddyUp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="messages">Messages</string>
    <string name="find">Find</string>
    <string name="profile">Profile</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="signout">Signout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
</resources>