<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/disp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/roundtext"
        android:text=""
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/forgotPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/forgottxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="Account Recovery"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#171717" />

        <EditText
            android:id="@+id/forgotmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgottxt"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundtext"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/reset"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_below="@+id/forgotmail"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="115dp"
            android:background="@drawable/round"
            android:backgroundTint="#03A9F4"
            android:text="Reset Password"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/back"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_below="@+id/reset"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/round"
            android:backgroundTint="#03A9F4"
            android:text="Login"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="115dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#171717" />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundtext"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundtext"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/round"
            android:backgroundTint="#03A9F4"
            android:text="@string/action_sign_in_short"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/signup"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/round"
            android:backgroundTint="#03A9F4"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/forgot_password" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signupPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/signuptext"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="115dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#171616"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signuptext"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundtext"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundtext"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/npassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundtext"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/cpassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/npassword"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundtext"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/register"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_below="@+id/cpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="115dp"
            android:background="@drawable/round"
            android:backgroundTint="#03A9F4"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/already"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/round"
            android:backgroundTint="#03A9F4"
            android:text="@string/already_have_an_account"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>